--- a/css/extra.css
+++ b/css/extra.css
@@ -1,13 +1,10 @@
 .hero, .card, .feature, .cta {
-	/* Consolidated brightness filter classes */
 	.filter-brightness {
 		filter: brightness(var(--brightness));
 	}
-	/* ...existing code... */
 }
 
-/* Define brightness levels */
 :root {
-	--brightness: 1.0; /* Default brightness */
+	--brightness: 1.0; 
 }
 
